generated/checkers/refine/KN-Memory-Leak-c8dafb0e-2/build_logs/syntax-repair-refine-2-2/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘clang::ento::ProgramStateRef {anonymous}::SAGenTestChecker::evalAssume(clang::ento::ProgramStateRef, clang::ento::SVal, bool) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:152:51: error: ‘const class clang::ento::ProgramState’ has no member named ‘getStackFrame’; did you mean ‘enterStackFrame’?
  152 |           const StackFrameContext *Owner = State->getStackFrame();
      |                                                   ^~~~~~~~~~~~~
      |                                                   enterStackFrame
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:177:55: error: ‘const class clang::ento::ProgramState’ has no member named ‘getStackFrame’; did you mean ‘enterStackFrame’?
  177 |               const StackFrameContext *Owner = State->getStackFrame();
      |                                                       ^~~~~~~~~~~~~
      |                                                       enterStackFrame
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
